--- a/yoloWorld_detectSeg_frontend/index.html
+++ b/yoloWorld_detectSeg_frontend/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="http://localhost:3333/favicon.ico" />
     <!--    <link rel="icon" href="/favicon.ico" />-->
     <link rel="stylesheet" href="/app-loading.css" />
-    <title>基于深度学习算法的垃圾检测系统</title>
+    <title>基于YOLO-World的目标检测及其分割管理平台</title>
   </head>
   <body>
     <div id="app">
